objects/Bill__c.object
<CustomObject>
    <description>It is bill object for making bill</description>
    <fields>
        <fullName>Bill_Date__c</fullName>
        <description>Here is bill date when bill is created</description>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <description>It is bill Number</description>
        <displayFormat>B-{000}</displayFormat>
        <label>Bill Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It is bill Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>